# qp-zk-circuits-rm

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  setup_qac.sh  taplo.toml
.github/workflows/: basics.yaml  ci.yml  create-release-proposal.yml  create-release-tag-and-publish.yml
aggregator/: Cargo.toml
aggregator/benches/: aggregator.rs
aggregator/src/: aggregator.rs  circuit.rs  lib.rs
benches/: bench.rs
circuit/: Cargo.toml
circuit/src/: amounts.rs  circuit.rs  codec.rs  exit_account.rs  fcodec.rs  inputs.rs  lib.rs  nullifier.rs  storage_proof.rs  substrate_account.rs  test_helpers.rs  unspendable_account.rs  util.rs  utils.rs
common/: Cargo.toml
common/src/: circuit.rs  gadgets.rs  lib.rs  utils.rs
prover/: Cargo.toml
prover/benches/: prover.rs  prover_bench.rs
prover/src/: lib.rs
src/: amounts.rs  lib.rs  nullifier.rs  prover.rs  storage_proof.rs  unspendable_account.rs  verifier.rs
src/circuit/: amounts.rs  exit_account.rs  gadgets.rs  mod.rs  nullifier.rs  storage_proof.rs  unspendable_account.rs
tests/: Cargo.toml  README.md
tests/benches/: prover.rs  verifier.rs
tests/src/: circuit_helpers.rs  lib.rs  test_helpers.rs
tests/src/aggregator/: aggregator_tests.rs  circuit_tests.rs  mod.rs
tests/src/circuit/: nullifier_tests.rs  storage_proof_tests.rs  substrate_account_tests.rs  test_helpers.rs  unspendable_account_tests.rs  utils_tests.rs
tests/src/prover/: prover_tests.rs
tests/src/verifier/: verifier_tests.rs
tests/test-helpers/: Cargo.toml
verifier/: Cargo.toml
verifier/benches/: verifier_bench.rs
verifier/src/: lib.rs
voting/: Cargo.toml  README.md
voting/src/: lib.rs
wormhole/: README.md
wormhole-circuit/: Cargo.toml
wormhole-circuit/src/: amounts.rs  lib.rs  nullifier.rs  unspendable_account.rs
wormhole-prover/: Cargo.toml
wormhole-verifier/: Cargo.toml
wormhole/aggregator/: Cargo.toml
wormhole/aggregator/benches/: aggregator.rs
wormhole/aggregator/src/: aggregator.rs  circuit.rs  lib.rs  util.rs
wormhole/aggregator/src/circuits/: flat.rs  mod.rs  tree.rs
wormhole/circuit/: Cargo.toml
wormhole/circuit-builder/: Cargo.toml
wormhole/circuit-builder/src/: lib.rs  main.rs
wormhole/circuit/src/: circuit.rs  codec.rs  inputs.rs  lib.rs  nullifier.rs  storage_proof.rs  substrate_account.rs  unspendable_account.rs
wormhole/circuit/src/storage_proof/: leaf.rs  mod.rs
wormhole/example/: Cargo.toml  README.md
wormhole/example/src/: main.rs
wormhole/prover/: Cargo.toml  README.md
wormhole/prover/benches/: prover.rs
wormhole/prover/src/: lib.rs
wormhole/tests/: Cargo.toml  README.md
wormhole/tests/src/: circuit_helpers.rs
wormhole/tests/src/aggregator/: aggregator_tests.rs  circuit_tests.rs  mod.rs
wormhole/tests/src/circuit/: circuit_data_tests.rs  mod.rs  nullifier_tests.rs  storage_proof_tests.rs  substrate_account_tests.rs  unspendable_account_tests.rs  utils_tests.rs
wormhole/tests/src/prover/: mod.rs  prover_tests.rs
wormhole/tests/src/verifier/: mod.rs  verifier_tests.rs
wormhole/tests/test-helpers/: Cargo.toml
wormhole/tests/test-helpers/src/: lib.rs
wormhole/verifier/: Cargo.toml  README.md
wormhole/verifier/benches/: verifier.rs
wormhole/verifier/src/: lib.rs
