[workspace]
members = [
    "common",
    "wormhole/aggregator",
    "wormhole/circuit",
    "wormhole/circuit-builder",
    "wormhole/prover",
    "wormhole/tests",
    "wormhole/tests/test-helpers",
    "wormhole/verifier",
    "voting",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
criterion = { version = "0.5.1", default-features = false }
plonky2 = { git = "https://github.com/Quantus-Network/plonky2", default-features = false, branch = "feat/stabilize" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quantus Network"]
description = "Wormhole circuit implementation using Plonky2"
license = "MIT"

[workspace.lints.clippy]
uninlined_format_args = "allow"
