[workspace]
members = [
  "common",
  "wormhole/aggregator",
  "wormhole/circuit",
  "wormhole/circuit-builder",
  "wormhole/prover",
  "wormhole/tests",
  "wormhole/tests/test-helpers",
  "wormhole/verifier",
  "wormhole/example",
  "voting",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
criterion = { version = "0.5.1", default-features = false }
qp-plonky2 = { version = "1.1.0", default-features = false, features = [
  "no_random",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quantus Network"]
description = "Wormhole circuit implementation using Plonky2"
repository = "https://github.com/aletheia-labs/qp-zk-circuits-rm"
keywords = ["zk", "circuits", "plonky2", "wormhole"]
categories = ["cryptography"]
license = "MIT"

[workspace.lints.clippy]
uninlined_format_args = "allow"
