[workspace]
members = [
	"common",
	"voting",
	"wormhole/aggregator",
	"wormhole/circuit",
	"wormhole/circuit-builder",
	"wormhole/example",
	"wormhole/prover",
	"wormhole/tests",
	"wormhole/tests/test-helpers",
	"wormhole/verifier",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
criterion = { version = "0.5.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
qp-plonky2 = { version = "1.1.0", default-features = false, features = [
	"no_random",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[workspace.package]
authors = ["Quantus Network"]
categories = ["cryptography"]
description = "Wormhole circuit implementation using Plonky2"
edition = "2021"
keywords = ["circuits", "plonky2", "wormhole", "zk"]
license = "MIT"
repository = "https://github.com/aletheia-labs/qp-zk-circuits-rm"
version = "0.1.0"

[workspace.lints.clippy]
uninlined_format_args = "allow"
