[package]
name = "wormhole-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
plonky2.workspace = true
wormhole-circuit = { path = "../circuit" }
wormhole-prover = { path = "../prover" }
wormhole-verifier = { path = "../verifier" }

[dev-dependencies]
# This is the same crate as used in plonky2. Need to have it for dummy proofs to work correctly.
hashbrown = { version = "0.14.3", default-features = false, features = [
  "ahash",
  "serde",
] }

[features]
testing = [
  "wormhole-circuit/testing",
  "wormhole-verifier/testing",
  "wormhole-prover/testing",
]
