[package]
name = "wormhole-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
plonky2.workspace = true
wormhole-circuit = { path = "../circuit" }
wormhole-prover = { path = "../prover" }
wormhole-verifier = { path = "../verifier" }
# This is the same crate as used in plonky2. Need to have it for dummy proofs to work correctly.
hashbrown = { version = "0.14.3", default-features = false, features = [
  "ahash",
  "serde",
] }

[dev-dependencies]

[features]
