[package]
name = "wormhole-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true, default-features = false }
wormhole-circuit = { path = "../circuit", default-features = false }
wormhole-prover = { path = "../prover", default-features = false }
wormhole-verifier = { path = "../verifier", default-features = false }

[features]
default = ["std"]
std = [
  "anyhow/std",
  "plonky2/std",
  "wormhole-circuit/std",
  "wormhole-prover/std",
  "wormhole-verifier/std",
]
no_std = []

[lints]
workspace = true
