[package]
name = "zk-circuits-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = false }
qp-plonky2 = { workspace = true, default-features = false }
serde = { workspace = true }

[features]
default = ["std"]
std = ["anyhow/std", "qp-plonky2/std", "serde/std"]
no_random = ["qp-plonky2/no_random"]
