[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-zk-circuits-common"
version.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = false }
qp-plonky2 = { workspace = true, default-features = false }
serde = { workspace = true }

[features]
default = ["std"]
no_random = ["qp-plonky2/no_random"]
std = ["anyhow/std", "qp-plonky2/std", "serde/std"]
