[package]
name = "wormhole-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
plonky2.workspace = true
wormhole-circuit = { path = "../circuit" }

[features]

[[bench]]
name = "prover_bench"
harness = false

[dev-dependencies]
criterion = { workspace = true }