[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[features]
bench = []

[dependencies]
wormhole-aggregator = { path = "../aggregator" }
wormhole-circuit = { path = "../circuit" }
wormhole-prover = { path = "../prover" }
wormhole-verifier = { path = "../verifier" }
plonky2 = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
rand = { version = "0.9.1", default-features = false, features = [
  "thread_rng",
] }
criterion = { workspace = true }
# This is the same crate as used in plonky2. Need to have it for dummy proofs to work correctly.
hashbrown = { version = "0.14.3", default-features = false, features = [
  "ahash",
  "serde",
] }

[[bench]]
name = "prover"
harness = false

[[bench]]
name = "verifier"
harness = false
