[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[features]
bench = []

[dependencies]
wormhole-aggregator = { path = "../aggregator" }
wormhole-circuit = { path = "../circuit" }
wormhole-prover = { path = "../prover" }
wormhole-verifier = { path = "../verifier" }
plonky2 = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
rand = { version = "0.9.1", default-features = false, features = [
  "thread_rng",
] }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "prover"
harness = false

[[bench]]
name = "verifier"
harness = false
