[package]
name = "wormhole-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
plonky2 = { workspace = true } #, features = ["no_random"] }
wormhole-circuit = { path = "../circuit" }

[dev-dependencies]
wormhole-prover = { path = "../prover" }
criterion = { workspace = true }
plonky2 = { workspace = true }

[features]

[[bench]]
name = "verifier_bench"
harness = false
