[package]
name = "wormhole-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true, default-features = false }
wormhole-circuit = { path = "../circuit", default-features = false }

[dev-dependencies]
wormhole-prover = { path = "../prover" }

[features]
default = ["std"]
std = ["anyhow/std", "plonky2/std", "wormhole-circuit/std"]
no_std = []

[lints]
workspace = true
