[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "al-voting-circuit"
publish = false
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2 = { workspace = true }
zk-circuits-common = { package = "al-zk-circuits-common", path = "../common" }

[features]
default = ["std"]
std = ["anyhow/std", "qp-plonky2/std", "zk-circuits-common/std"]
