[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-aggregator"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2 = { workspace = true }
rayon = { version = "1.10.0", optional = true }
test-helpers = { path = "../tests/test-helpers", default-features = false }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "0.0.3", path = "../circuit", default-features = false }
wormhole-prover = { package = "qp-wormhole-prover", version = "0.0.3", path = "../prover", default-features = false }
wormhole-verifier = { package = "qp-wormhole-verifier", version = "0.0.3", path = "../verifier", default-features = false }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "0.0.3", path = "../../common" }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["multithread", "std"]
multithread = ["rayon"]
no_zk = []
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"wormhole-prover/std",
	"wormhole-verifier/std",
	"zk-circuits-common/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "aggregator"
