[package]
name = "wormhole-circuit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
zk-circuits-common = { path = "../../common" }

[features]
default = ["std"]
std = ["anyhow/std", "hex/std", "plonky2/std", "zk-circuits-common/std"]
no_std = ["zk-circuits-common/no_std"]

[lints]
workspace = true
