[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "wormhole-circuit"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
qp-plonky2 = { workspace = true }
zk-circuits-common = { version = "0.0.1", path = "../../common", default-features = false }

[features]
default = ["std"]
std = ["anyhow/std", "qp-plonky2/std", "zk-circuits-common/std"]

[lints]
workspace = true
