[package]
edition = "2021"
name = "wormhole-example"
publish = false
version = "0.1.0"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["alloc"] }
qp-plonky2 = { workspace = true, features = ["default"] }
wormhole-circuit = { package = "al-wormhole-circuit", path = "../circuit", default-features = false, features = [
	"std",
] }
wormhole-prover = { package = "al-wormhole-prover", path = "../prover", default-features = false }
zk-circuits-common = { package = "al-zk-circuits-common", path = "../../common" }
