[package]
edition = "2021"
name = "wormhole-example"
publish = false
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["alloc"] }
qp-plonky2 = { workspace = true, features = ["default"] }
wormhole-circuit = { package = "al-wormhole-circuit", version = "0.0.2", path = "../circuit", default-features = false, features = [
	"std",
] }
wormhole-prover = { package = "al-wormhole-prover", version = "0.0.2", path = "../prover", default-features = false }
zk-circuits-common = { package = "al-zk-circuits-common", version = "0.0.2", path = "../../common" }
