[package]
name = "wormhole-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2 = { workspace = true }
wormhole-circuit = { version = "0.0.1",  path = "../circuit" }
zk-circuits-common = { version = "0.0.1",  path = "../../common" }

[dev-dependencies]
criterion = { workspace = true }
test-helpers = { path = "../tests/test-helpers" }

[features]
default = ["std"]
std = [
  "anyhow/std",
  "qp-plonky2/std",
  "wormhole-circuit/std",
  "zk-circuits-common/std",
]
no_random = ["qp-plonky2/no_random"]

[lints]
workspace = true

[[bench]]
name = "prover"
harness = false
