[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "al-wormhole-prover"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2 = { workspace = true }
wormhole-circuit = { package = "al-wormhole-circuit", version = "0.0.3", path = "../circuit" }
zk-circuits-common = { package = "al-zk-circuits-common", version = "0.0.3", path = "../../common" }

[dev-dependencies]
criterion = { workspace = true }
test-helpers = { path = "../tests/test-helpers" }

[features]
default = ["std"]
no_random = ["qp-plonky2/no_random"]
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"wormhole-circuit/std",
	"zk-circuits-common/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "prover"
