[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "tests"
version.workspace = true

[features]
bench = []

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
qp-plonky2 = { workspace = true, default-features = true }
rand = { version = "0.9.1", default-features = false, features = [
	"thread_rng",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
test-helpers = { path = "./test-helpers" }
wormhole-aggregator = { path = "../aggregator" }
wormhole-circuit = { path = "../circuit", default-features = true }
wormhole-prover = { path = "../prover", default-features = true }
wormhole-verifier = { path = "../verifier", default-features = true }
zk-circuits-common = { path = "../../common" }

[lints]
workspace = true
