[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "tests"
version.workspace = true

[features]
bench = []

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
qp-plonky2 = { workspace = true, default-features = true }
rand = { version = "0.9.1", default-features = false, features = [
	"thread_rng",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
test-helpers = { path = "./test-helpers" }
wormhole-aggregator = { package = "al-wormhole-aggregator", version = "0.0.1", path = "../aggregator" }
wormhole-circuit = { package = "al-wormhole-circuit", version = "0.0.1", path = "../circuit", default-features = true }
wormhole-prover = { package = "al-wormhole-prover", version = "0.0.1", path = "../prover", default-features = true }
wormhole-verifier = { package = "al-wormhole-verifier", version = "0.0.1", path = "../verifier", default-features = true }
zk-circuits-common = { package = "al-zk-circuits-common", version = "0.0.1", path = "../../common" }

[lints]
workspace = true
