[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "wormhole-verifier"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2 = { workspace = true, default-features = false }
wormhole-circuit = { path = "../circuit", default-features = false }
zk-circuits-common = { path = "../../common", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
wormhole-prover = { path = "../prover" }

[features]
default = ["std"]
no_random = ["qp-plonky2/no_random"]
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"wormhole-circuit/std",
	"zk-circuits-common/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "verifier"
