[package]
edition = "2021"
name = "test-helpers"
version.workspace = true

[dependencies]
hex = { workspace = true }
qp-plonky2 = { workspace = true, default-features = true }
wormhole-circuit = { package = "al-wormhole-circuit", path = "../../circuit" }
zk-circuits-common = { package = "al-zk-circuits-common", path = "../../../common" }
