[package]
edition = "2021"
name = "test-helpers"
version.workspace = true

[dependencies]
hex = { workspace = true }
qp-plonky2 = { workspace = true, default-features = true }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "0.1.0", path = "../../circuit" }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "0.1.0", path = "../../../common" }
